# Protocolics-Anonymous

./: CMakeLists.txt  README.md  revision.h.in.cmake
client/: Protocolics Anonymous - Client.cbp
cmake/: genrev.cmake  options.cmake  showoptions.cmake
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/openpgp/: CMakeLists.txt
dep/openpgp/PrecompiledHeaders/: OpenPGPPCH.cpp  OpenPGPPCH.h
dep/pdcurses/: CMakeLists.txt  CMakeLists.txt.old
server/: Protocolics Anonymous - Server.cbp  Protocolics Anonymous - Server.layout
server/src/: main.cpp  main.h
server/src/Client/: Client.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  CMakeLists.txt.old  Main.cpp  client.rc
src/client/Client/: Client.cpp  Client.h
src/client/PrecompiledHeaders/: clientPCH.h
src/server/: CMakeLists.txt  Main.cpp  server.aps  server.rc
src/server/Handler/: Handler.cpp  Handler.h
src/server/Handler/old/: Client_Acceptor.h  Client_Handler.h
src/server/PrecompiledHeaders/: serverPCH.cpp
src/server/Server/: Server.cpp  Server.h
src/shared/: CMakeLists.txt  Define.h  Protocol.cpp  Protocol.h  ProtocolTask.cpp  ProtocolTask.h  revision.h.old
src/shared/Compressor/: Compressor.cpp  Compressor.h
src/shared/Configuration/: Config.h
src/shared/Cryptography/: Cryptography.cpp  Cryptography.h
src/shared/Debugging/: Errors.h  WheatyExceptionReport.cpp
src/shared/Handler/: Client_Acceptor.h  Client_Handler.cpp  Client_Handler.h
src/shared/PrecompiledHeaders/: protocolPCH.cpp
src/shared/Recv/: Recv.cpp  Recv.h
src/shared/Xmit/: Xmit.cpp  Xmit.h
